kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name of the deployment resource, used to identify and manage it
  name: swear-stop-frontend
  labels:
    # Label categorizing the application as part of the frontend
    tier: frontend
    # Layer tag to help manage different application components (e.g., backend, frontend)
    layer: website
spec:
  # Number of pod replicas (only 1 instance for now)
  replicas: 1
  selector:
    # Selector to match the pods created by this deployment based on labels
    matchLabels:
      tier: frontend
      layer: website
  template:
    metadata:
      labels:
        # Labels to associate with the pod created by this deployment
        tier: frontend
        layer: website
    spec:
      imagePullSecrets:
        - name: swear-stop-docker-registry
      # InitContainer to run migrations before the main application container starts
      containers:
        - name: swear-stop-frontend
          # Docker image for the main frontend application
          image: danukawaidyatillake/text-moderator-frontend-app:v0.0.42
          # Exposing port 80 for web traffic
          ports:
            - containerPort: 80
