kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swear-stop-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: swear-stop-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swear-stop-frontend-service
                port:
                  number: 80
